k8s/bird/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bird
  template:
    metadata:
      labels:
        app: bird
    spec:
      containers:
      - name: bird
        image: bird:latest 
        ports:
        - containerPort: 4201
