k8s/bird/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bird-service
spec:
  selector:
    app: bird
  ports:
    - protocol: TCP
      port: 4201
      targetPort: 4201
