k8s/bird/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bird-ingress
spec:
  rules:
  - host: bird.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bird-service
            port:
              number: 4201
